# marksync

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO-v2-implementation.md  TODO.md  agents.yml  demo-project.md  demo_scenario.sh  docker-compose.yml  goal.yaml  project.functions.toon  project.toon  pyproject.toml  pyqual.yaml
.github/workflows/: ci.yml
.urisys/cache/markpacts/machine_cycle_process/ed694e836bdbf98d/: README.generated.md  manifest.yaml  markpact.json  source.markpact.md  tests.yaml
.urisys/cache/markpacts/machine_cycle_process/ed694e836bdbf98d/flows/: machine_cycle.uri.flow.yaml
.urisys/cache/markpacts/machine_cycle_process/ed694e836bdbf98d/urisys_markpact_machine_cycle_process_ed694e836b/: __init__.py
build-web-dashboard/: README.md
cli-test/: README.md
demos/: _gen_slides.py  _gen_slides_pdf.py  demo_browser.sh  demo_contract.sh  demo_integrations.sh  demo_live.py  demo_live_marksync.py  demo_slides.sh  run.sh
deploy/: docker-compose.swarm.yml
deploy/k8s/: configmap.yaml  dashboard.yaml  kustomization.yaml  namespace.yaml  orchestrator.yaml  storage.yaml  sync-server.yaml
docs/: api-adapters.md  api.md  architecture.md  channels.md  comparison.md  dsl-reference.md  formats.md  generate.md  integrations.md  pipelines.md  plugins.md
docs/1/: README.md
docs/comparisons/: README.md  vs-airflow.md  vs-camunda.md  vs-iac.md  vs-n8n.md  vs-temporal.md
examples/: bpmn_multiagent.py  pipeline_human_approval.yaml  pipeline_prompt.yaml
examples/1/: agents.yml  orchestrate.msdsl
examples/2/: README.md  agents.yml  orchestrate.msdsl
examples/3/: README.md  agents.yml  orchestrate.msdsl
examples/channels/: channel_config.yaml  docker-compose.e2e.yml  test_channels_e2e.py
examples/output/: 1_parallel_review.bpmn  2_async_notification.bpmn  3_approval_gateway.bpmn  4_full_collaboration.bpmn
marksync/: __init__.py  cli.py  hardware_detect.py  orchestrator.py  settings.py
marksync/agents/: __init__.py  base.py
marksync/auth/: __init__.py  middleware.py  roles.py  tokens.py
marksync/contract/: __init__.py  block_types.py  generator.py  templates.py
marksync/conversation/: __init__.py  engine.py
marksync/dashboard/: __init__.py  app.py  html.py
marksync/dsl/: __init__.py  api.py  executor.py  parser.py  shell.py
marksync/intent/: __init__.py  parser.py  yaml_generator.py
marksync/learning/: __init__.py  feedback.py  patterns.py  prompt_refiner.py
marksync/pipeline/: __init__.py  api.py  engine.py  llm_client.py  prompt_generator.py
marksync/plugins/: __init__.py  base.py  registry.py
marksync/plugins/api/: __init__.py  asyncapi.py  graphql.py  grpc.py  jsonschema.py  openapi.py
marksync/plugins/channels/: __init__.py  amqp.py  cli_stdio.py  grpc_stream.py  http_webhook.py  mqtt.py  nats.py  redis_pubsub.py  slack.py  sse.py  websocket.py
marksync/plugins/formats/: __init__.py  bpel.py  bpmn.py  cmmn.py  dmn.py  epc.py  petri.py  uml_activity.py  xpdl.py
marksync/plugins/integrations/: __init__.py  airflow.py  ansible.py  github.py  gitlab.py  kubernetes.py  n8n.py  pactown.py  terraform.py  urisys.py
marksync/report/: __init__.py  collector.py  renderer_html.py  renderer_pdf.py
marksync/sandbox/: __init__.py  app.py  html.py
marksync/sync/: __init__.py  crdt.py  engine.py  snapshots.py
marksync/transport/: __init__.py
rest-api-do-zarz-dzania-zam-wieniami-z-walidacj/: README.md
rest-api-test/: README.md
test-api/: README.md
tests/: conftest.py  test_dsl.py  test_examples.py  test_hardware_detect.py  test_marksync.py  test_orchestrator.py  test_pipeline.py  test_pipeline_scenarios.py  test_settings.py  test_urisys_integration.py  test_v2.py
