[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marksync"
version = "0.1.1"
description = "Multi-agent collaborative editing and deployment of Markpact projects via CRDT delta sync"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Softreck", email = "info@softreck.dev" },
    "Tom Sapletta <tom@sapletta.com>",
]
keywords = ["markpact", "crdt", "sync", "markdown", "agents", "collaborative"]

dependencies = [
    "markpact>=0.1.15",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.16",
    "websockets>=16.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "diff-match-patch>=20241021",
    "markdown-it-py>=3.0",
    "watchdog>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
mqtt = ["paho-mqtt>=2.1"]
all = ["marksync[ollama,mqtt]"]

[project.scripts]
marksync = "marksync.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/marksync"
Repository = "https://github.com/wronai/marksync"

[tool.hatch.build.targets.wheel]
packages = ["src/marksync"]
