[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marksync"
version = "0.2.27"
description = "Multi-agent collaborative editing and deployment of Markpact projects via CRDT delta sync"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["markpact", "crdt", "sync", "markdown", "agents", "collaborative"]

dependencies = [
    "markpact>=0.1.15",
    "pycrdt>=0.12",
    "pycrdt-websocket>=0.16",
    "websockets>=16.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "diff-match-patch>=20241021",
    "markdown-it-py>=3.0",
    "watchdog>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "pyyaml>=6.0",
    "nfo>=0.2.13",
]

[project.optional-dependencies]
ollama = ["ollama>=0.4"]
mqtt = ["paho-mqtt>=2.1"]
generate = ["litellm>=1.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]
all = ["marksync[ollama,mqtt,generate]"]

[project.scripts]
marksync = "marksync.cli:main"

[project.urls]
Homepage = "https://github.com/wronai/marksync"
Repository = "https://github.com/wronai/marksync"

[tool.hatch.build.targets.wheel]
packages = ["marksync"]

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
